--- a/example/clzd_test.html
+++ b/example/clzd_test.html
@@ -11,21 +11,15 @@
   <body>
     <main>
       <section class='scene fix up_after'>
-        <div class='container'>
-          <h1>one</h1>
-        </div>
+        <div class='container'></div>
         <span class='scroll-indicator'>V</span>
       </section>
       <section class='scene up shrink_after'>
-        <div class='container'>
-          <h1>two</h1>
-        </div>
+        <div class='container'></div>
         <span class='scroll-indicator'>V</span>
       </section>
       <section class='scene shrink up_after'>
-        <div class='container'>
-          <h1>three</h1>
-        </div>
+        <div class='container'></div>
         <span class='scroll-indicator reverse'>V</span>
       </section>
     </main>
