wechat view error

--- a/public/cube_test/test.html
+++ b/public/cube_test/test.html
@@ -70,5 +70,6 @@
       </section>
     </div>
   </body>
+  <script src='js/jquery-1.11.0.min.js'></script>
   <script src='js/sectionSlide.min.js'></script>
 </html>
