--- a/public/cube_test/test.html
+++ b/public/cube_test/test.html
@@ -39,35 +39,119 @@
             <div class='f_left icon'>
               <img src='img/card.png'>
             </div>
-            <div class='f_left middle_p'>
+            <div class='f_left middle_5'>
               <h6>很多的会员卡……</h6>
             </div>
             <div class='clear'></div>
           </div>
         </section>
         <section class='slide fade cube cube_after'>
-          <h5>用各种方法关照老顾客</h5>
-          <p>刷脸</p>
-          <p>会员卡</p>
+          <div class='sub_title'>
+            <h6>优热点鹿由君帮您轻松识别老顾客</h6>
+          </div>
+          <div class='piece'>
+            <div class='f_left demo_img'>
+              <img src='img/phone.png'>
+            </div>
+            <div class='f_left left_15'>
+              <h6>连接上网后</h6>
+              <h6>系统自动发现老顾客</h6>
+            </div>
+          </div>
         </section>
         <section class='slide fade cube cube_after'>
-          <h5>鹿由君帮您找到老顾客</h5>
-          <p>自动发现老顾客</p>
-          <p>主动送上一份温情</p>
+          <div class='sub_title'>
+            <h6>优热点鹿由君帮您轻松识别老顾客</h6>
+          </div>
+          <div class='piece'>
+            <div class='f_left demo_img'>
+              <img src='img/phone.png'>
+            </div>
+            <div class='f_left left_15'>
+              <h6>即刻通知老顾客</h6>
+              <h6>送上您的一份温情</h6>
+            </div>
+          </div>
+        </section>
+        <section class='slide fade cube cube_after'>
+          <div class='sub_title'>
+            <h6>研究表明，获得一位新顾客的成本是保持一位老顾客的6-7倍！</h6>
+            <p>——贝恩咨询</p>
+          </div>
+          <div class='proof'>
+            <div class='left'>
+              <h6>营销成本</h6>
+            </div>
+            <div class='proof_img'>
+              <img src='img/proof.png'>
+            </div>
+          </div>
         </section>
       </section>
-      <section class='scene up up_after'>
-        <h3>优化您的营销方式</h3>
+      <section class='scene up up_after white'>
+        <div class='orange_bar'></div>
+        <h3 class='title'>优化您的营销方式</h3>
         <section class='slide fade fix cube_after'>
-          <h5>每当推出新产品，既期待，又烦恼</h5>
-          <p>要做KT板、DM单</p>
-          <p>成本高、不及时、还特麻烦</p>
+          <div class='sub_title'>
+            <h6>推出新产品或新服务</h6>
+            <h6>您是否心中既期待又烦恼</h6>
+          </div>
+          <div class='piece'>
+            <div class='board'>
+              <img src='img/board.png'>
+            </div>
+            <div class='middle'>
+              <h6>KT板、DM单</h6>
+              <h6>成本高，不及时</h6>
+              <h6>难以追踪宣传效果</h6>
+            </div>
+          </div>
         </section>
         <section class='slide fade cube cube_after'>
-          <h5>鹿由君为您推荐新产品</h5>
-          <p>有效、方便、不操心</p>
-          <p>还能提升形象</p>
+          <div class='sub_title'>
+            <h6>优热点鹿由君帮您及时推广</h6>
+            <h6>连接上网时自动展示您的新服务</h6>
+          </div>
+          <div class='demo_bottom'>
+            <img src='img/show.png'>
+          </div>
         </section>
+        <section class='slide fade cube cube_after'>
+          <div class='sub_title'>
+            <h6>追踪每一次分享与点击</h6>
+            <h6>知悉宣传效果与用户群</h6>
+          </div>
+          <div class='demo_bottom'>
+            <img src='img/show.png'>
+          </div>
+        </section>
+      </section>
+      <section class='scene up up_after white'>
+        <h3 class='title'>明察秋毫 运筹帷幄</h3>
+        <section class='slide fade fix cube_after'>
+          <div class='sub_title'>
+            <h6>又开了一家分店</h6>
+            <h6>难以分身了解客情？</h6>
+          </div>
+        </section>
+        <section class='slide fade cube cube_after'>
+          <div class='data_img'>
+            <img src='img/new_custom.png'>
+          </div>
+        </section>
+        <section class='slide fade cube cube_after'>
+          <div class='data_img'>
+            <img src='img/rate.png'>
+          </div>
+        </section>
+        <section class='slide fade cube cube_after'>
+          <div class='data_img'>
+            <img src='img/period.png'>
+          </div>
+        </section>
+        <div class='bottom_img'>
+          <img src='img/shop.png'>
+        </div>
       </section>
     </div>
   </body>
