--- a/public/cube_test/test.html
+++ b/public/cube_test/test.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
     <meta content=' test for sectionSlide' name='Description'>
-    <title>sectionSlide</title>
+    <title>优热点，助力您的生意</title>
     <link href='css/screen.css' rel='stylesheet'>
     <script src='js/jquery-1.11.0.min.js'></script>
   </head>
@@ -18,6 +18,7 @@
           <img src='img/products.png'>
         </div>
         <div class='bottom-orange'></div>
+        <span class='scroll-indicator'>V</span>
       </section>
       <section class='scene up up_after orange'>
         <h3 class='title'>拉近您与顾客的距离</h3>
@@ -46,7 +47,7 @@
         </section>
         <section class='slide fade cube cube_after'>
           <div class='sub_title'>
-            <h6>优热点鹿由君帮您轻松识别老顾客</h6>
+            <h6>优热点帮您轻松识别老顾客</h6>
           </div>
           <div class='piece'>
             <div class='f_left demo_img'>
@@ -60,7 +61,7 @@
         </section>
         <section class='slide fade cube cube_after'>
           <div class='sub_title'>
-            <h6>优热点鹿由君帮您轻松识别老顾客</h6>
+            <h6>优热点帮您轻松识别老顾客</h6>
           </div>
           <div class='piece'>
             <div class='f_left demo_img'>
@@ -86,6 +87,7 @@
             </div>
           </div>
         </section>
+        <span class='scroll-indicator'>V</span>
       </section>
       <section class='scene up up_after white'>
         <div class='orange_bar'></div>
@@ -124,6 +126,7 @@
             <img src='img/show.png'>
           </div>
         </section>
+        <span class='scroll-indicator'>V</span>
       </section>
       <section class='scene up up_after white'>
         <h3 class='title'>明察秋毫 运筹帷幄</h3>
@@ -151,6 +154,7 @@
         <div class='bottom_img'>
           <img src='img/shop.png'>
         </div>
+        <span class='scroll-indicator'>V</span>
       </section>
     </div>
   </body>
