--- a/public/cube_test/test.html
+++ b/public/cube_test/test.html
@@ -26,20 +26,20 @@
           <div class='sub_title'>
             <h6>您已使出浑身解数关注老顾客？</h6>
           </div>
-          <div class='piece'>
+          <div class='piece bounceIn fragment' data-auto='800'>
             <div class='f_left icon'>
               <img src='img/people.png'>
             </div>
-            <div class='f_left middle_p'>
+            <div class='f_left t_5'>
               <h6>记住老顾客的脸！</h6>
             </div>
             <div class='clear'></div>
           </div>
-          <div class='piece'>
+          <div class='piece bounceIn fragment' data-auto='800'>
             <div class='f_left icon'>
               <img src='img/card.png'>
             </div>
-            <div class='f_left middle_5'>
+            <div class='f_left t_5'>
               <h6>很多的会员卡……</h6>
             </div>
             <div class='clear'></div>
@@ -49,25 +49,36 @@
           <div class='sub_title'>
             <h6>优热点帮您轻松识别老顾客</h6>
           </div>
+          <div class='a_left phone_frame roll fragment' data-auto='500' data-exempt='5'>
+            <img src='img/phone.png'>
+          </div>
           <div class='piece'>
-            <div class='f_left demo_img'>
-              <img src='img/phone.png'>
+            <div class='phone_inside a_left'>
+              <div class='w_50 t_15 bounceIn fragment' data-auto='800'>
+                <img src='img/online_t.png'>
+              </div>
+              <div class='w_80 t_15 bounceIn fragment' data-auto='800'>
+                <img src='img/online.png'>
+              </div>
             </div>
-            <div class='f_left left_15'>
+            <div class='a_right t_15 t_left w_50 bounceIn fragment' data-auto='800' data-exempt='2'>
               <h6>连接上网后</h6>
               <h6>系统自动发现老顾客</h6>
             </div>
           </div>
-        </section>
-        <section class='slide fade cube cube_after'>
-          <div class='sub_title'>
-            <h6>优热点帮您轻松识别老顾客</h6>
-          </div>
           <div class='piece'>
-            <div class='f_left demo_img'>
-              <img src='img/phone.png'>
+            <div class='phone_inside a_left'>
+              <div class='w_50 t_15 bounceIn fragment' data-auto='1800' data-clear='1' data-exempt='3'>
+                <img src='img/online_success_t.png'>
+              </div>
+              <div class='w_50 t_15 bounceIn fragment' data-auto='2' data-exempt='3'>
+                <img src='img/online_success.png'>
+              </div>
+              <div class='w_80 t_15 bounceIn fragment' data-auto='800' data-exempt='3'>
+                <img src='img/welcome.png'>
+              </div>
             </div>
-            <div class='f_left left_15'>
+            <div class='a_right t_left t_15 w_50 bounceIn fragment' data-auto='800' data-clear='3'>
               <h6>即刻通知老顾客</h6>
               <h6>送上您的一份温情</h6>
             </div>
@@ -79,7 +90,7 @@
             <p>——贝恩咨询</p>
           </div>
           <div class='proof'>
-            <div class='left'>
+            <div class='t_left'>
               <h6>营销成本</h6>
             </div>
             <div class='proof_img'>
