--- a/public/cube_test/test.html
+++ b/public/cube_test/test.html
@@ -61,7 +61,7 @@
                 <img src='img/online.png'>
               </div>
             </div>
-            <div class='a_right t_15 t_left w_50 bounceIn fragment' data-auto='800' data-exempt='2'>
+            <div class='a_right t_15 t_left w_50 bounceIn fragment' data-auto='800' data-exempt='3'>
               <h6>连接上网后</h6>
               <h6>系统自动发现老顾客</h6>
             </div>
@@ -120,16 +120,11 @@
           </div>
         </section>
         <section class='slide fade cube cube_after'>
-          <div class='sub_title'>
+          <div class='sub_title fragment' data-auto='1'>
             <h6>优热点鹿由君帮您及时推广</h6>
             <h6>连接上网时自动展示您的新服务</h6>
           </div>
-          <div class='demo_bottom'>
-            <img src='img/show.png'>
-          </div>
-        </section>
-        <section class='slide fade cube cube_after'>
-          <div class='sub_title'>
+          <div class='sub_title fragment' data-clear='1'>
             <h6>追踪每一次分享与点击</h6>
             <h6>知悉宣传效果与用户群</h6>
           </div>
@@ -148,17 +143,16 @@
           </div>
         </section>
         <section class='slide fade cube cube_after'>
-          <div class='data_img'>
+          <div class='computer_frame fragment' data-auto='1' data-exempt='2'>
+            <img src='img/computer.png'>
+          </div>
+          <div class='data_img bounceIn fragment' data-auto='1'>
             <img src='img/new_custom.png'>
           </div>
-        </section>
-        <section class='slide fade cube cube_after'>
-          <div class='data_img'>
+          <div class='data_img bounceIn fragment' data-clear='1'>
             <img src='img/rate.png'>
           </div>
-        </section>
-        <section class='slide fade cube cube_after'>
-          <div class='data_img'>
+          <div class='data_img bounceIn fragment' data-clear='1'>
             <img src='img/period.png'>
           </div>
         </section>
@@ -166,6 +160,71 @@
           <img src='img/shop.png'>
         </div>
         <span class='scroll-indicator'>V</span>
+      </section>
+      <section class='scene up up_after white'>
+        <h3 class='title'>上网更流畅</h3>
+        <section class='slide fade fix cube_after'>
+          <div class='sub_title fragment' data-auto='0'>
+            <h6>上网人数太多，连不上网？</h6>
+            <h6>有人看视频，网速特别慢？</h6>
+            <h6>出现故障，不知如何解决？</h6>
+          </div>
+          <div class='sub_title fragment' data-clear='0'>
+            <h6>优热点让您的网络快速流畅</h6>
+          </div>
+          <div class='sub_title t_left fragment' data-auto='1000'>
+            <br>
+            <h6>专业设备，显著提升联网人数</h6>
+            <br>
+            <h6>智能限速，</h6>
+            <h6>蹭网看视频也不影响网速</h6>
+            <br>
+            <h6>故障智能检测、远程报警，</h6>
+            <h6>第一时间解决问题</h6>
+          </div>
+        </section>
+      </section>
+      <section class='scene up up_after white'>
+        <div class='a_bottom orange_bar'></div>
+        <h3 class='title'>运营维护轻松省心</h3>
+        <section class='slide fade fix cube_after'>
+          <div class='b_middle w_80 t_left fragment' data-auto='0'>
+            <h6>隔壁老王生意提升迅猛</h6>
+            <h6>用了什么黑科技</h6>
+          </div>
+          <div class='b_middle w_80 t_left fragment' data-clear='1'>
+            <h6>您也想试试，</h6>
+            <h6>却担心效果不理想，</h6>
+            <h6>专人运营成本过高？</h6>
+          </div>
+          <div class='black_teck'>
+            <img src='img/black_tech.png'>
+          </div>
+        </section>
+        <section class='slide fade cube cube_after'>
+          <div class='sub_title'>
+            <h6>优热点帮您打理黑科技</h6>
+          </div>
+          <div class='w_80 b_middle'>
+            <img src='img/service.png'>
+          </div>
+        </section>
+        <section class='slide fade cube cube_after'>
+          <div class='piece'>
+            <img src='img/compare.png'>
+          </div>
+        </section>
+        <section class='slide fade cube cube_after'>
+          <div class='sub_title'>
+            <h6>让您专心做擅长的事</h6>
+          </div>
+          <div class='w_30 b_middle'>
+            <img src='img/girrafe.png'>
+          </div>
+        </section>
+      </section>
+      <section class='scene up up_after orange'>
+        <h3 class='title'>选择适合您的版本</h3>
       </section>
     </div>
   </body>
