--- a/public/cube_test/test.html
+++ b/public/cube_test/test.html
@@ -54,10 +54,10 @@
           </div>
           <div class='piece'>
             <div class='phone_inside a_left'>
-              <div class='w_50 t_15 bounceIn fragment' data-auto='800'>
+              <div class='w_50 t_25 bounceIn fragment' data-auto='800'>
                 <img src='img/online_t.png'>
               </div>
-              <div class='w_80 t_15 bounceIn fragment' data-auto='800'>
+              <div class='w_80 t_25 bounceIn fragment' data-auto='800'>
                 <img src='img/online.png'>
               </div>
             </div>
@@ -68,13 +68,10 @@
           </div>
           <div class='piece'>
             <div class='phone_inside a_left'>
-              <div class='w_50 t_15 bounceIn fragment' data-auto='1800' data-clear='1' data-exempt='3'>
-                <img src='img/online_success_t.png'>
-              </div>
-              <div class='w_50 t_15 bounceIn fragment' data-auto='2' data-exempt='3'>
+              <div class='w_50 t_25 bounceIn fragment' data-auto='1800' data-clear='1' data-exempt='3'>
                 <img src='img/online_success.png'>
               </div>
-              <div class='w_80 t_15 bounceIn fragment' data-auto='800' data-exempt='3'>
+              <div class='w_80 t_25 bounceIn fragment' data-auto='800' data-exempt='3'>
                 <img src='img/welcome.png'>
               </div>
             </div>
@@ -162,17 +159,22 @@
         <span class='scroll-indicator'>V</span>
       </section>
       <section class='scene up up_after white'>
+        <div class='w_100'>
+          <img src='img/shop_bar.png'>
+        </div>
         <h3 class='title'>上网更流畅</h3>
         <section class='slide fade fix cube_after'>
           <div class='sub_title fragment' data-auto='0'>
             <h6>上网人数太多，连不上网？</h6>
+            <br>
             <h6>有人看视频，网速特别慢？</h6>
+            <br>
             <h6>出现故障，不知如何解决？</h6>
           </div>
           <div class='sub_title fragment' data-clear='0'>
             <h6>优热点让您的网络快速流畅</h6>
           </div>
-          <div class='sub_title t_left fragment' data-auto='1000'>
+          <div class='inline_block b_middle t_left fragment' data-auto='1000'>
             <br>
             <h6>专业设备，显著提升联网人数</h6>
             <br>
@@ -188,16 +190,17 @@
         <div class='a_bottom orange_bar'></div>
         <h3 class='title'>运营维护轻松省心</h3>
         <section class='slide fade fix cube_after'>
-          <div class='b_middle w_60 t_left fragment' data-auto='0'>
+          <div class='b_middle inline_block t_left fragment' data-auto='0'>
             <h6>隔壁老王生意提升迅猛</h6>
-            <h6>用了什么黑科技</h6>
+            <h6>用了什么<span class="black_tech_t">黑科技</span>?</h6>
           </div>
-          <div class='b_middle w_60 t_left fragment' data-clear='1'>
+          <div></div>
+          <div class='b_middle inline_block t_left fragment' data-clear='1'>
             <h6>您也想试试，</h6>
             <h6>却担心效果不理想，</h6>
             <h6>专人运营成本过高？</h6>
           </div>
-          <div class='black_teck'>
+          <div class='black_tech'>
             <img src='img/black_tech.png'>
           </div>
         </section>
@@ -218,13 +221,45 @@
           <div class='sub_title'>
             <h6>让您专心做擅长的事</h6>
           </div>
-          <div class='w_30 b_middle'>
+          <div class='w_20 b_middle'>
             <img src='img/girrafe.png'>
           </div>
         </section>
       </section>
       <section class='scene up up_after orange'>
         <h3 class='title'>选择适合您的版本</h3>
+        <section class='slide'>
+          <div class='b_middle w_60'>
+            <img src='img/version.png'>
+          </div>
+        </section>
+      </section>
+      <section class='scene up up_after white'>
+        <div class='w_100'>
+          <img src='img/last_top.png'>
+        </div>
+        <div class='w_80 b_middle'>
+          <div class='t_left t_15'>
+            <h6>联系我们</h6>
+          </div>
+          <div class='contact_wrapper'>
+            <div class='f_left ico'>
+              <img src='img/phone_ico.png'>
+            </div>
+            <div class='f_left'>
+              <h6>4000287991</h6>
+            </div>
+            <div class='clear'></div>
+          </div>
+          <div class='contact_wrapper'>
+            <div class='f_left ico mt_3'>
+              <img src='img/addr_ico.png'>
+            </div>
+            <div class='f_left w_80 t_left'>
+              <h6>成都市武侯区西部智谷D区4栋204</h6>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </body>
