--- a/public/cube_test/test.html
+++ b/public/cube_test/test.html
@@ -9,6 +9,12 @@
     <script src='js/jquery-1.11.0.min.js'></script>
   </head>
   <body>
+    <div class='loader'>
+      <div class='spinner'>
+        <div class='ball'></div>
+        <p>LOADING</p>
+      </div>
+    </div>
     <div class='main'>
       <section class='scene fix up_after white'>
         <div class='logo'>
