--- a/public/cube_test/test.html
+++ b/public/cube_test/test.html
@@ -12,7 +12,7 @@
     <div class='loader'>
       <div class='spinner'>
         <div class='ball'></div>
-        <p>LOADING</p>
+        <p>加载中...</p>
       </div>
     </div>
     <div class='main'>
@@ -28,7 +28,21 @@
       </section>
       <section class='scene up up_after orange'>
         <h3 class='title'>拉近您与顾客的距离</h3>
-        <section class='slide fix fade cube_after'>
+        <section class='slide fade fix cube_after'>
+          <div class='sub_title'>
+            <h6 class='t_left'>研究表明，获得一位新顾客的成本是保持一位老顾客的6-7倍！</h6>
+            <h6 class='t_left'>——贝恩咨询</h6>
+          </div>
+          <div class='proof'>
+            <div class='t_left'>
+              <h6>营销成本</h6>
+            </div>
+            <div class='proof_img'>
+              <img src='img/proof.png'>
+            </div>
+          </div>
+        </section>
+        <section class='slide cube fade cube_after'>
           <div class='sub_title'>
             <h6>您已使出浑身解数关注老顾客？</h6>
           </div>
@@ -41,7 +55,7 @@
             </div>
             <div class='clear'></div>
           </div>
-          <div class='piece bounceIn fragment' data-auto='800'>
+          <div class='piece bounceIn fragment' data-auto='0'>
             <div class='f_left icon'>
               <img src='img/card.png'>
             </div>
@@ -63,7 +77,7 @@
               <div class='w_50 t_25 bounceIn fragment' data-auto='800'>
                 <img src='img/online_t.png'>
               </div>
-              <div class='w_80 t_25 bounceIn fragment' data-auto='800'>
+              <div class='w_80 t_25 bounceIn fragment' data-auto='0'>
                 <img src='img/online.png'>
               </div>
             </div>
@@ -77,27 +91,13 @@
               <div class='w_50 t_25 bounceIn fragment' data-auto='1800' data-clear='1' data-exempt='3'>
                 <img src='img/online_success.png'>
               </div>
-              <div class='w_80 t_25 bounceIn fragment' data-auto='800' data-exempt='3'>
+              <div class='w_80 t_25 bounceIn fragment' data-auto='0' data-exempt='3'>
                 <img src='img/welcome.png'>
               </div>
             </div>
-            <div class='a_right t_left t_25 w_50 bounceIn fragment' data-auto='800' data-clear='3'>
+            <div class='a_right t_left t_30 w_50 bounceIn fragment' data-auto='800' data-clear='3'>
               <h6>即刻通知老顾客</h6>
               <h6>送上您的一份温情</h6>
-            </div>
-          </div>
-        </section>
-        <section class='slide fade cube cube_after'>
-          <div class='sub_title'>
-            <h6>研究表明，获得一位新顾客的成本是保持一位老顾客的6-7倍！</h6>
-            <p>——贝恩咨询</p>
-          </div>
-          <div class='proof'>
-            <div class='t_left'>
-              <h6>营销成本</h6>
-            </div>
-            <div class='proof_img'>
-              <img src='img/proof.png'>
             </div>
           </div>
         </section>
@@ -235,7 +235,7 @@
       <section class='scene up up_after orange'>
         <h3 class='title'>选择适合您的版本</h3>
         <section class='slide'>
-          <div class='b_middle w_60'>
+          <div class='b_middle w_80'>
             <img src='img/version.png'>
           </div>
         </section>
